# tauri-example

./: package-lock.json  package.json
src/: App.tsx  package.json
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: handler.rs
src/js/: app.js
