[package]
name = "desktop"
version = "0.1.0"
description = "A desktop"
authors = ["you"]
license = "Apache-2.0 OR MIT"
repository = ""
default-run = "desktop"
edition = "2021"
rust-version = "1.70.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.1", features = [] }

[dependencies]
serde_json = "1.0.122"
url = "2.5.2"
lazy_static = "1.5.0"
serde = { version = "1.0.205", features = ["derive"] }
tauri = { version = "2.0.0-rc.1", features = [ "protocol-asset", "devtools"] }
tauri-plugin-process = "2.0.0-rc.0"
tauri-plugin-http = "2.0.0-rc.0"
tauri-plugin-notification = "2.0.0-rc.0"
log = "0.4.22"
env_logger = "0.11.5"
tauri-plugin-shell = "2.0.0-rc.0"

[target.'cfg(target_os = "windows")'.dependencies]
window-shadows = "0.2.2"
webview2-com = "0.32.0"
windows = { version = "0.58.0", features = ["UI_Notifications", "Data_Xml_Dom"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
objc = "0.2.7"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

# default to small, optimized release binaries
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
